# mmabey.github.io

./: .buildinfo  .gitignore  .travis.yml  CNAME  Caddyfile  Makefile  Pipfile  blog_template.rst  classes.html  conf.py  genindex.html  hosts  index.html  index.rst  make.bat  mike_web_server.yml  mkblog.py  mkmap.py  objects.inv  pubs.html  pubs.rst  pyproject.toml  requirements.txt  run_make.sh  search.html  searchindex.js  service.html  service.rst  sitemap.xml  teaching.html  teaching.rst  web.html  web.rst
.github/workflows/: main.yml
_build/doctrees/: environment.pickle  index.doctree  pubs.doctree  web.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  pubs.html  search.html  (+2 more)
_static/: custom.css  opensearch.xml  tag_toggle.js
_templates/: breadcrumbs.html  layout.html  searchbox.html
blog/: conf.py  index.html  index.rst  sample_blog.md
config/: webserver_vars.yml
cse469s19/: assignments.html  assignments.rst  course_info.txt  hw1.rst  hw1_mbr.html  hw1_mbr.rst  hw2.rst  hw3.rst  hw3_email.html  hw3_email.rst  hw4_address_conv.html  hw5_mac_conv.html  hw5_mac_conv.rst  index.html  index.md  index.rst  paper_report.html  paper_report.md  paper_report.rst  project.html  project.rst  schedule.csv  syllabus.html  syllabus.md  syllabus.rst
docs/: .buildinfo  CNAME  blog.html  classes.html  exam_timer.html  genindex.html  index.html  objects.inv  pubs.html  search.html  searchindex.js  service.html  sitemap.xml  teaching.html  web.html
other/: exam_timer.html
src/: classes.rst  conf.py  index.rst  mkblog.py  mkmap.py  web.rst
(+295 files in other folders)
