[tool.poetry]
name = "my_website"
version = "0.1.0"
description = "https://mikemabey.com"
authors = ["Mike Mabey <mmabey@ieee.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-markdown-tables = "*"
ufmt = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
sphinx-autobuild = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
